--- a/Frontend/foodies/src/components/ExploreMenu/ExploreMenu.css
+++ b/Frontend/foodies/src/components/ExploreMenu/ExploreMenu.css
@@ -36,8 +36,12 @@
     margin: 10px 0px;
     height: 2px;
     background-color: #e2e2e2;
-    border: none;
-    
+    border: none;   
+}
+
+.explore-menu-list-item .active{
+    border: 4px solid tomato;
+    padding: 2px;
 }
 
 
